GoalTracker/force-app/main/default/objects/Event_Organizer__c/Event_Organizer__c.object-meta.xml
<CustomObject>
    <description>AQ_Custom</description>
    <label>Event Organizer</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Event Organizer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>