GoalTracker/force-app/main/default/objects/Event_Organizer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_CUSTOM</description>
    <inlineHelpText>Indicates the contact who organized the event.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Organizers</relationshipLabel>
    <relationshipName>Event_Organizers</relationshipName>
    <type>Lookup</type>
</CustomField>