GoalTracker/force-app/main/default/objects/Event_Organizer__c/fields/Event_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <label>Event Organizer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Organizers</relationshipLabel>
    <relationshipName>Event_Organizers</relationshipName>
    <type>Lookup</type>
</CustomField>