GoalTracker/force-app/main/default/objects/Event_Organizer__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <description>The start date of the event, used for display purposes on a related list off the affiliated org.</description>
    <formula>Event__r.AQB__StartDateandTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>DateTime</type>
</CustomField>