GoalTracker/force-app/main/default/objects/Event_Organizer__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>AQB_Custom</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Organizer</fullName>
                <default>true</default>
                <label>Event Organizer</label>
            </value>
            <value>
                <fullName>Staff on Duty</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
                <isActive>false</isActive>
                <label>Administrator</label>
            </value>
            <value>
                <fullName>Caller</fullName>
                <isActive>false</isActive>
                <label>Caller</label>
            </value>
            <value>
                <fullName>Committee Member</fullName>
                <isActive>false</isActive>
                <label>Committee Member</label>
            </value>
            <value>
                <fullName>Door/Tickets/Programs</fullName>
                <isActive>false</isActive>
                <label>Door/Tickets/Programs</label>
            </value>
            <value>
                <fullName>Event Coordinator</fullName>
                <isActive>false</isActive>
                <label>Event Coordinator</label>
            </value>
            <value>
                <fullName>Event Logistics</fullName>
                <isActive>false</isActive>
                <label>Event Logistics</label>
            </value>
            <value>
                <fullName>Event Staff</fullName>
                <isActive>false</isActive>
                <label>Event Staff</label>
            </value>
            <value>
                <fullName>Host</fullName>
                <isActive>false</isActive>
                <label>Host</label>
            </value>
            <value>
                <fullName>Master/Mistress of Ceremonies</fullName>
                <isActive>false</isActive>
                <label>Master/Mistress of Ceremonies</label>
            </value>
            <value>
                <fullName>Mingler</fullName>
                <isActive>false</isActive>
                <label>Mingler</label>
            </value>
            <value>
                <fullName>Other Duties</fullName>
                <isActive>false</isActive>
                <label>Other Duties</label>
            </value>
            <value>
                <fullName>Presenter</fullName>
                <isActive>false</isActive>
                <label>Presenter</label>
            </value>
            <value>
                <fullName>Primary Organizer</fullName>
                <isActive>false</isActive>
                <label>Primary Organizer</label>
            </value>
            <value>
                <fullName>Reunion Host</fullName>
                <isActive>false</isActive>
                <label>Reunion Host</label>
            </value>
            <value>
                <fullName>SARC Reunion Host</fullName>
                <isActive>false</isActive>
                <label>SARC Reunion Host</label>
            </value>
            <value>
                <fullName>Social Host</fullName>
                <isActive>false</isActive>
                <label>Social Host</label>
            </value>
            <value>
                <fullName>Speaker</fullName>
                <isActive>false</isActive>
                <label>Speaker</label>
            </value>
            <value>
                <fullName>Staff Contact</fullName>
                <isActive>false</isActive>
                <label>Staff Contact</label>
            </value>
            <value>
                <fullName>Student Host</fullName>
                <isActive>false</isActive>
                <label>Student Host</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>